# Provenance

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  install.sh  pyproject.toml
.claude/skills/spec-capture-expectations/: SKILL.md
.claude/skills/spec-drift-sync/: SKILL.md
.claude/skills/spec-entry-format/: SKILL.md
.claude/skills/spec-request-flow/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml
docs/: README.md  agent-setup.md  architecture.md  cli.md  development.md  publishing.md  spec-format.md
prompts/: spec-agent.md
prov/: CONTEXT.md  agent.md  cli.md  core.md  format.md  install.md  storage.md
prov/.spec/: code-index.json  graph.json
scripts/: build.sh  dev-install.sh  install-pipx-local.sh  install-spec-pre-commit.sh  publish.sh
specs/: CONTEXT.md  agent.md  cli.md  core.md  format.md  install.md  storage.md
specs/.spec/: code-index.json  graph.json
src/: prov.py  spec.py
src/prov/: __init__.py  __main__.py  cli.py  format.py  indexing.py  installer.py  model.py  spec_io.py  writer.py
src/prov/commands/: __init__.py  check_slug.py  context.py  diff.py  domain.py  find.py  impact.py  init.py  orient.py  rebuild.py  reconcile.py  scope.py  sync.py  validate.py  write.py
src/prov/prompts/: spec-agent.md
src/prov/rules/: project-rules.md  spec-agent-protocol.md  spec-skill-router.md
src/prov/skills/spec-capture-expectations/: SKILL.md
src/prov/skills/spec-drift-sync/: SKILL.md
src/prov/skills/spec-entry-format/: SKILL.md
src/prov/skills/spec-request-flow/: SKILL.md
tests/: test_backlinks.py  test_installer.py
