[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-cli"
version = "0.1.0"
description = "Living requirements index + CLI for spec-driven development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Provenance" }]
keywords = ["spec", "requirements", "provenance", "cli", "spec-driven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = []

[project.scripts]
prov = "prov.cli:main"

[project.urls]
Homepage = "https://github.com/nndn/Provenance"
Repository = "https://github.com/nndn/Provenance"

[tool.setuptools.packages.find]
where = ["src"]
