[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-cli"
version = "0.2.0"
description = "Living requirements index + CLI for spec-driven development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Provenance" }]
keywords = ["spec", "requirements", "provenance", "cli", "spec-driven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = ["typer>=0.12"]

[project.scripts]
prov = "prov.cli:main"

[project.urls]
Homepage = "https://github.com/nndn/Provenance"
Repository = "https://github.com/nndn/Provenance"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/prov"]
# Non-Python agent assets (prov/skills/**/SKILL.md, prov/rules/*.md,
# prov/prompts/*.md) are package-dir files, included by hatchling by default.
